prefer underscore_style names

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_library(
     crypto
     STATIC
+    aead.cpp
     crypto.cpp
-    aead/AEAD.cpp
     codec/base64.cpp
     codec/base64url.cpp
     codec/codec.cpp
-    md/SHA256.cpp)
+    md/sha256.cpp)
 
 target_include_directories(crypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 target_link_libraries(crypto PRIVATE MbedTLS::mbedcrypto)
